--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -3,7 +3,7 @@
 
     <div layout="column" style="margin: 8px; min-width: 366px; max-width: 366px; min-height: 100%;">
         <md-toolbar layout="row" class="md-whiteframe-z1 md-toolbar-tools-medium">
-            <span flex>Sensor Graph Tools</span>
+            <span flex>Tools</span>
         </md-toolbar>
         <div flex class="md-whiteframe-z1" layout="column" layout-align="start center" md-theme="{{themePrimaryButtons}}">
 
@@ -46,9 +46,9 @@
             </md-checkbox>
 
             <div layout="row" layout-align="center center" ng-show="!vm.searchDiscrete" style="min-height: 46px; max-height: 46px">
-                <span style="margin-right: 8px;">Interval:</span>
-                <md-select md-theme="{{themePrimaryButtons}}" ng-init="vm.intervalNum = 1" ng-model="vm.intervalNum"
-                    style="margin: 0; padding: 8px">
+                <span style="margin-right: 8px; cursor: default" title="Only resamples for results with multiple samples in the given interval">Resampling Interval:</span>
+                <md-select md-theme="{{themePrimaryButtons}}" ng-init="vm.intervalNum = '10'" ng-model="vm.intervalNum"
+                    style="margin: 0; padding: 8px" ng-disabled="vm.intervalType === 'n'">
                     <md-option value="1">1</md-option>
                     <md-option value="2">2</md-option>
                     <md-option value="5">5</md-option>
@@ -60,6 +60,7 @@
                 </md-select>
                 <md-select md-theme="{{themePrimaryButtons}}" ng-init="vm.intervalType = 'm'" ng-model="vm.intervalType"
                     style="margin: 0; padding: 8px">
+                    <md-option value="n">No Interval</md-option>
                     <md-option value="s">Second(s)</md-option>
                     <md-option value="m">Minute(s)</md-option>
                     <md-option value="h">Hour(s)</md-option>
@@ -163,6 +164,12 @@
                     <md-menu-item>
                         <md-checkbox class="md-primary" ng-model="vm.showContextZoom" ng-change="vm.showOptionsChanged()">
                             Show Context Zoom
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item menu-disable-close>
+                        <md-checkbox class="md-primary" ng-model="vm.useFixedXAxis" ng-change="vm.showOptionsChanged()"
+                            title="The x axis will use the start and end supplied in the search query">
+                            Use Fixed X Axis Values
                         </md-checkbox>
                     </md-menu-item>
                     <md-menu-item menu-disable-close>
