--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
-<script src="bower_components/Sortable/Sortable.min.js"></script>
 
 <!-- JS from Bower Components -->
 <script src="bower_components/less.js/dist/less.min.js" data-build="exclude"></script>
@@ -407,6 +406,7 @@
                     <md-tooltip>Current Interlock State</md-tooltip>
                 </span>
                 <div style="position: absolute; bottom: 0; left: 0; right: 0" layout="row" layout-align="center center">
+                    <b ng-if="$root.devMode">{{$root.portalUrl}}</b>
                     <span style="margin: 0 4px;">{{$root.systemConfig.version.description}}</span>
                     <span style="margin: 0 4px;">{{$root.systemConfig.version.deployment_date}}</span>
                     <md-tooltip>CAM System Description and Deployment Date</md-tooltip>
