--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -125,7 +125,7 @@
                     placeholder="Search Drafts..." />
             </div>
         </md-toolbar>
-        <md-virtual-repeat-container flex flex>
+        <md-virtual-repeat-container flex>
             <div md-virtual-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true"
                 title="{{item.id_code}} - {{item.description}} - {{item.type}} - {{item.desired_start_time}}"
                 ng-class="{'selected-resource-item': item.selected}" class="schedule-draft-item" layout="row"
