--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 <script src="app/scheduler/subarray-resources/subarray-resources.js"></script>
 <script src="app/scheduler/observations/observations-detail.js"></script>
 <script src="app/scheduler/observations/observations-overview.js"></script>
+<script src="app/scheduler/program-blocks/program-block-view.js"></script>
 <script src="app/userlogs/userlogs.js"></script>
 <script src="app/userlogs/userlog-tags.js"></script>
 <script src="app/userlogs/userlog-reports.js"></script>
