--- a/index.html
+++ b/index.html
@@ -31,17 +31,11 @@
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="node_modules/angular-resource/angular-resource.js"></script>
 <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<!-- <script src="node_modules/angular-ui-utils/ui-utils.js"></script> -->
 <script src="node_modules/ngstorage/ngStorage.js"></script>
 <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-<!-- <script src="node_modules/jsjws/jws-3.0.js"></script> -->
-<!-- <script src="node_modules/jsjws/ext/json-sans-eval-min.js"></script> -->
-<!-- <script src="node_modules/jsrsasign/jsrsasign-4.7.0-all-min.js"></script> -->
 <script src="node_modules/d3/d3.js"></script>
-<!-- <script src="node_modules/jspdf/dist/jspdf.min.js"></script> -->
-<!-- <script src="node_modules/html2canvas/build/html2canvas.js"></script> -->
-<!-- <script src="node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script> -->
-<!--<script src="node_modules/angular-gantt/assets/angular-gantt.js"></script>-->
+<script src="node_modules/jspdf/dist/jspdf.min.js"></script>
+<script src="node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
 <script src="node_modules/crypto-js/core.js"></script>
 <script src="node_modules/crypto-js/enc-base64.js"></script>
 <script src="node_modules/crypto-js/sha256.js"></script>
