--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <script src="node_modules/angular-animate/angular-animate.js"></script>
 <script src="node_modules/hammerjs/hammer.js"></script>
 <script src="node_modules/angular-material/angular-material.js"></script>
-<script src="node_modules/angular-mocks/angular-mocks.js"></script>
+<script src="node_modules/angular-mocks/angular-mocks.js" data-build="exclude"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="node_modules/angular-resource/angular-resource.js"></script>
 <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
