--- a/app/video/video.html
+++ b/app/video/video.html
@@ -13,7 +13,8 @@
     </div>
 
     <div ng-if="vm.canOperateVDS" class="legend-popup" style="background: transparent;" layout="row" ng-init="transparentButton = true"
-         ng-class="{'transparent-legend':transparentButton && !showControls}">
+         ng-class="{'transparent-legend':transparentButton && !showControls}"
+         ng-show="vm.sensorValues[vm.vds_name + '_device_status'].value === 'ok'" >
         <md-button flex style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showControls = true" ng-click="showControls = !showControls"
                    ng-mouseenter="transparentButton = false" ng-mouseleave="transparentButton = true" class="md-fab md-mini md-primary">
             <md-icon class="fa" ng-if="!showControls" md-font-icon="fa-caret-up"></md-icon>
